# message_pool

./: .gitignore  CMakeLists.txt  README.md
include/: message_pool.h
src/: message_pool_tests.cpp
